# polimi-nmpde-project

./: CMakeLists.txt  README.md  cmake-common.cmake
include/: generics.hpp
test/: test1.cpp
