cmake_minimum_required(VERSION 3.12.0)

find_package(deal.II 9.7.0 REQUIRED)

project(NmPDE_Project LANGUAGES CXX C)

##############################################
#              My Libraries                  #
##############################################


##############################################
#              My Tests                      #
##############################################


##############################################
#              My Executables                #
##############################################
#add_executable()
#deal_ii_setup_target()
